<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/cat0"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.blogspot.huyhungdinh.tv.model.ExGridView
                    android:id="@+id/gv_cat0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center">

                </com.blogspot.huyhungdinh.tv.model.ExGridView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/cat1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.blogspot.huyhungdinh.tv.model.ExGridView
                    android:id="@+id/gv_cat1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center">

                </com.blogspot.huyhungdinh.tv.model.ExGridView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/cat2"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.blogspot.huyhungdinh.tv.model.ExGridView
                    android:id="@+id/gv_cat2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center">

                </com.blogspot.huyhungdinh.tv.model.ExGridView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/cat3"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.blogspot.huyhungdinh.tv.model.ExGridView
                    android:id="@+id/gv_cat3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center">

                </com.blogspot.huyhungdinh.tv.model.ExGridView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/cat4"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.blogspot.huyhungdinh.tv.model.ExGridView
                    android:id="@+id/gv_cat4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center">

                </com.blogspot.huyhungdinh.tv.model.ExGridView>

            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/cat5"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.blogspot.huyhungdinh.tivi.model.ExGridView
                    android:id="@+id/gv_cat5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center">

                </com.blogspot.huyhungdinh.tivi.model.ExGridView>

            </LinearLayout>-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>